--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@ f=false,d=document,code={use_existing_jquery:function(){return use_existing_jque
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a onmouseover="window.VWO = window.VWO || [];window.VWO.push(['track.goalConversion',12]);" class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" onclick="_pcq.push(['triggerOptIn']);" 
+                                                             href="#contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
